ingress-level/green-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bluegreen
  name: green-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    slot: green
  type: ClusterIP
status:
  loadBalancer: {}
